--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "dependencies": {
     "next": "9.5.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "next-manifest": "^3.0.1",
+    "next-offline": "^4.0.6",
+    "next-page-transitions": "^1.0.0-beta.2",
+    "next-redux-wrapper": "^3.0.0",
+    "lodash": "^4.17.15",
+    "glob": "^7.1.6"
   }
 }
